--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     outputs:
-      mc-version: ${{ steps.versions.output.mc-version }}
-      forgehax-version: ${{ steps.versions.output.forgehax-version }}
-      forge-version: ${{ steps.versions.output.forge-version }}
+      mc-version: ${{ steps.gradle.output.mc-version }}
+      forgehax-version: ${{ steps.gradle.output.forgehax-version }}
+      forge-version: ${{ steps.gradle.output.forge-version }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -17,16 +17,15 @@ jobs:
           java-version: 1.8
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
-        env:
-          CI_BUILDING: yes
-      - name: Versioning
-        run: /gradlew setupActionsOutputs
-        id: versions
+      - uses: burrunan/gradle-cache-action@v1
+        name: Gradle with caching
+        id: gradle
+        with:
+          arguments: build setupActionsOutputs --build-cache
+          gradle-version: wrapper
       - uses: actions/upload-artifact@v2
         with:
-          name: ForgeHax_${{ steps.versions.output.mc-version }}_${{ steps.versions.output.forgehax-version }}
+          name: ${{ steps.gradle.output.forgehax-version }}
           path: build/libs/ForgeHax*.jar
   release:
     runs-on: ubuntu-20.04
@@ -35,7 +34,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v2
         with:
-          name: ForgeHax_${{ steps.versions.output.mc-version }}_${{ steps.versions.output.forgehax-version }}
+          name: ${{ needs.build.outputs.forgehax-version }}
       - uses: ncipollo/release-action@v1
         with:
           artifacts: ForgeHax*.jar
