Migrate CI to Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,10 @@ jobs:
         run: chmod +x gradlew
       - uses: burrunan/gradle-cache-action@v1
         name: Gradle with caching
-        with:
-          arguments: build --build-cache
-          gradle-version: wrapper
-      - name: Get version of ForgeHax, Forge, and Minecraft
-        run: ./gradlew setupActionsOutputs
         id: gradle
+        with:
+          arguments: setupActionsOutputs build --build-cache
+          gradle-version: wrapper
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.gradle.output.forgehax-version }}
