--- a/build.gradle
+++ b/build.gradle
@@ -232,6 +232,7 @@ task copyJar(type: DefaultTask, dependsOn: [setGameDir]) {
 }
 
 task setupActionsOutputs() {
+  println 'GitHub Actions outputs'
   println "::set-output name=mc-version::${minecraftVersion}"
   println "::set-output name=forgehax-version::${forgehaxVersion}"
   println "::set-output name=forge-version::${forgeVersion}"
