--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,23 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Cache .gradle/caches
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: ${{ runner.os }}-gradle-
+      - name: Cache .gradle/wrapper
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle-wrapper-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - uses: burrunan/gradle-cache-action@v1
-        name: Gradle with caching
+      - name: Gradle build
         id: gradle
-        with:
-          arguments: setupActionsOutputs build --build-cache
-          gradle-version: wrapper
+        run: ./gradlew setupActionsOutputs clean build --build-cache
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.gradle.outputs.forgehax-version }}
@@ -42,5 +51,6 @@ jobs:
           artifacts: ForgeHax*.jar
           tag: ${{ needs.build.outputs.forgehax-tag }}
           commit: ${{ github.sha }}
-          body: Built on Forge version ${{ needs.build.outputs.forge-version }}
+          name: ForgeHax ${{ needs.build.outputs.forgehax-version }} for Minecraft ${{ needs.build.outputs.mc-version }}
+          body: Built using Forge MDK version ${{ needs.build.outputs.forge-version }}
           token: ${{ secrets.GITHUB_TOKEN }}
