--- a/buildSrc/JavacPlugin/build.gradle
+++ b/buildSrc/JavacPlugin/build.gradle
@@ -33,18 +33,18 @@ dependencies {
 
 //  compile group: 'org.kohsuke.metainf-services', name: 'metainf-services', version: '1.8'
 
-  compile files("${System.properties['java.home']}/../lib/tools.jar")
-  compile project(':Annotations')
-  compile files(unpackedLombok)
+  implementation files("${System.properties['java.home']}/../lib/tools.jar")
+  implementation project(':Annotations')
+  implementation files(unpackedLombok)
 
 //  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
-  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
-  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
-  testCompile group: 'commons-io', name: 'commons-io', version: '2.8.0'
-  testCompile group: 'com.google.testing.compile', name: 'compile-testing', version: '0.19'
-  testCompile group: 'org.ow2.asm', name: 'asm-debug-all', version: '5.2'
-  testCompile group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
+  testImplementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+  testImplementation group: 'com.google.testing.compile', name: 'compile-testing', version: '0.19'
+  testImplementation group: 'org.ow2.asm', name: 'asm-debug-all', version: '5.2'
+  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
 }
 
 task unpackLombok {
@@ -57,6 +57,7 @@ task unpackLombok {
       into unpackedLombok
       include 'lombok/**/*'
       rename "(.*)[.]SCL[.]lombok", '$1.class'
+      duplicatesStrategy DuplicatesStrategy.EXCLUDE
     }
   }
 }
