--- a/build.gradle
+++ b/build.gradle
@@ -83,9 +83,6 @@ repositories {
 }
 
 dependencies {
-  // forge provides us the wrong version, might need to remove this eventually
-  implementation group: 'org.ow2.asm', name: 'asm-util', version: '7.2'
-
   compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 
@@ -111,11 +108,11 @@ jar {
   manifest {
     attributes([
         "Specification-Title"     : "ForgeHax",
-        "Specification-Vendor"    : "nhackindustries",
+        "Specification-Vendor"    : "fikidev",
         "Specification-Version"   : "1",
         "Implementation-Title"    : project.name,
         "Implementation-Version"  : project.version,
-        "Implementation-Vendor"   : "nhackindustries",
+        "Implementation-Vendor"   : "fikidev",
         "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
     ])
   }
