--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -31,7 +31,12 @@ jobs:
         id: exec
         run: |
           ./scripts/cibuild
-          echo '::set-output name=changelog::$(git log $(git describe --tags --abbrev=0)..HEAD --oneline)'
+          COMMIT_LOGS="$(git log $(git describe --tags --abbrev=0)..HEAD --oneline)"
+          COMMIT_LOGS="${COMMIT_LOGS//'%'/'%25'}"
+          COMMIT_LOGS="${COMMIT_LOGS//$'\n'/'%0A'}"
+          COMMIT_LOGS="${COMMIT_LOGS//$'\r'/'%0D'}"
+          echo "::set-output name=changelog::${COMMIT_LOGS}"
+
 
       - name: Upload the built artifact
         uses: actions/upload-artifact@v2
