--- a/buildSrc/JavacPlugin/build.gradle
+++ b/buildSrc/JavacPlugin/build.gradle
@@ -24,27 +24,20 @@ configurations {
   lombok
 }
 
-repositories {
-  mavenCentral()
-}
-
 dependencies {
-  lombok group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
+  lombok libs.lombok
 
-//  compile group: 'org.kohsuke.metainf-services', name: 'metainf-services', version: '1.8'
+//  implementation group: 'org.kohsuke.metainf-services', name: 'metainf-services', version: '1.8'
 
-  implementation files("${System.properties['java.home']}/../lib/tools.jar")
+  implementation files(org.gradle.internal.jvm.Jvm.current().toolsJar)
   implementation project(':Annotations')
   implementation files(unpackedLombok)
 
-//  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
-  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
-  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
-  testImplementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
-  testImplementation group: 'com.google.testing.compile', name: 'compile-testing', version: '0.19'
-  testImplementation group: 'org.ow2.asm', name: 'asm-debug-all', version: '5.2'
-  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
+  testImplementation libs.bundles.jupiter
+  testImplementation libs.commonsio
+  testImplementation libs.testingcompile
+  testImplementation libs.ow2asm
+  testImplementation libs.assertj
 }
 
 task unpackLombok {
