--- a/buildSrc/settings.gradle
+++ b/buildSrc/settings.gradle
@@ -1,3 +1,17 @@
+enableFeaturePreview 'VERSION_CATALOGS'
+
+dependencyResolutionManagement {
+  repositories {
+    mavenCentral()
+  }
+
+  versionCatalogs {
+    libs {
+      from files('../libs.versions.toml')
+    }
+  }
+}
+
 rootProject.name = 'buildSrc'
 include 'Annotations'
 include 'JavacPlugin'
