--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -2,8 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ '**' ]
-    tags: [ 'v*' ]
+    branches:
+      - '**'
+    tags:
+      - 'v*'
   pull_request:
 
 jobs:
