Remove unnecessary comments and correct step name to be accurate

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Cache .gradle/caches
+      - name: Caches Gradle dependencies and wrappers
         uses: actions/cache@v2
         with:
           path: |
@@ -30,8 +30,6 @@ jobs:
         run: ./scripts/cibuild
 
       - name: Cleanup Gradle Cache
-        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
-        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
         run: |
           rm -f ~/.gradle/caches/modules-2/modules-2.lock
           rm -f ~/.gradle/caches/modules-2/gc.properties
