Fix permission issue deleting gradle cache files

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Cleanup Gradle Cache
         run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
+          sudo rm -f ~/.gradle/caches/modules-2/modules-2.lock
+          sudo rm -f ~/.gradle/caches/modules-2/gc.properties
 
       - name: Upload the built artifact
         uses: actions/upload-artifact@v2
