--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -11,7 +11,6 @@ services:
       - ~/.gradle/wrapper/dists:/root/.gradle/wrapper/dists:z
       - ./:/opt/build:Z
     working_dir: /opt/build
-    entrypoint: bash -c 'set -x
-      && chmod +x gradlew
+    command: bash -c 'set -x
       && ./gradlew --no-daemon -p buildSrc clean
       && ./gradlew --no-daemon --no-build-cache clean build'
