Update & Cleanup CI (#371)
* Update & Cleanup CI

* Change jar vendor

* Change jar artifact name

* Disable gradle daemon for project since it causes cibuild to hang

* Small fixes & improve caching in CI and container

* Refactor and attempt to fix artifact error

* CI is `true` not `yes` as defined by GitHub Actions

* Rename cibuild.yml to continuous_integration.yml

* Fix CI cache

* Fix changelog

* Stop gradle daemons before running container

* Use ubuntu-latest

* Move git commit log bash script to scripts/cibuild to handle errors better

* Move control of dependencies versions to libs.versions.toml

* Make name formatting consistent

* Be more verbose about what is cached. Remove certain problematic files from being cached

* Add cache restore-key

* Format arrays by Actions standards

* Pin JDK version and rename docker service

* Move git changelog logic to its own function

* Remove unnecessary comments and correct step name to be accurate

* Fix permission issue deleting gradle cache files

* fix bin path

* Use `command` instead of `entrypoint` in docker-compose.ci.yml

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -2,10 +2,6 @@ plugins {
   id 'java'
 }
 
-repositories {
-  mavenCentral()
-}
-
 dependencies {
-  compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.13', ext: 'pom'
+  implementation platform(libs.groovy)
 }
